--- a/.gitignore
+++ b/.gitignore
@@ -58,6 +58,9 @@ dlldata.c
 # Benchmark Results
 BenchmarkDotNet.Artifacts/
 
+# Files outside the App
+projectDescription.txt
+
 # .NET Core
 project.lock.json
 project.fragment.lock.json
