--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -7,6 +7,9 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
+      "https": {
+        "commandName": "Project"
+      },
       "dotnetRunMessages": true,
       "applicationUrl": "http://localhost:5053"
     },
