--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -11,4 +11,13 @@
     <ProjectReference Include="..\Persistence\Persistence.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ProjectManagers\DTOs\" />
+    <Folder Include="Projects\DTOs\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Mapster" Version="7.4.0" />
+  </ItemGroup>
+
 </Project>
