--- a/API/Properties/launchSettings.json
+++ b/API/Properties/launchSettings.json
@@ -23,7 +23,7 @@
     },
     "Development": {
       "commandName": "Project",
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
