swagger response instead of produces response type in controllers + date time to date only and vica versa at EF-DB + working pm create

--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -2,9 +2,11 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Microsoft.AspNetCore": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "DetailedErrors": true,
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Database=ProjectManagerDB;Trusted_Connection=True;TrustServerCertificate=True;"
